fix: z-index order of modal and playback controls

--- a/packages/metastream-app/src/components/GameLobby.css
+++ b/packages/metastream-app/src/components/GameLobby.css
@@ -10,10 +10,13 @@
   width: 100%;
   height: 100%;
   position: relative;
-  --overlay-spacing: 50px;
+
   --overlay-z-index: 10;
-  --overlay-list-max-width: none;
   --playback-overlay-z-index: 11;
+  --modal-z-index: 12;
+
+  --overlay-spacing: 50px;
+  --overlay-list-max-width: none;
   --overlay-anim-duration: 160ms;
   --chat-docked-width: 21rem;
   --chat-float-bottom-spacing: 150px;
@@ -127,5 +130,5 @@
 .modal {
   composes: absolute-full from '~styles/layout.css';
   top: var(--app-titlebar-height) !important;
-  z-index: var(--overlay-z-index);
+  z-index: var(--modal-z-index);
 }
